<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="Description:"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_ingredient_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="Ingredient Description"
                android:inputType="text"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="Category:"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_ingredient_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="Ingredient Category"
                android:inputType="text"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:text="Best Before Date:"
                android:textSize="16sp"
                android:maxLines="1"/>

            <DatePicker
                android:id="@+id/edit_bestbeforedate_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="Location:"
                android:textSize="16sp"
                android:maxLines="1"/>

            <RadioGroup
                android:id="@+id/location_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="3"
                android:checkedButton="@id/Pantry">

                <RadioButton
                    android:id="@+id/Pantry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Pantry"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="5dp"/>

                <RadioButton
                    android:id="@+id/Freezer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Freezer"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="5dp"/>

                <RadioButton
                    android:id="@+id/Fridge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Fridge"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="5dp"/>

            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="4"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="Amount:"
                android:textSize="16sp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/edit_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Ingredient Amount"
                android:inputType="text"
                android:textSize="16sp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="Unit:"
                android:textSize="16sp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/edit_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Unit"
                android:inputType="text"
                android:textSize="16sp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"/>


        </LinearLayout>

    </LinearLayout>
</ScrollView>