...
            android:text="Sort by"
            tools:layout_editor_absoluteX="6dp"
            android:textSize="15sp"
            android:layout_weight=".4" />

        <Spinner
            android:id="@+id/ingredient_sort_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@array/sorting_ingredient"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_weight="1.2">
...
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="50dp"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_ingredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight=".2"
...
