...
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:text="Edit"
                    android:textSize="10sp"/>

                <Button
                    android:id="@+id/delete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Delete"
                    android:textSize="10sp"/>

            </LinearLayout>
...
